# tuf-on-ci

./: .gitignore  IMPLEMENTATION-NOTES.md  LICENSE  README.md  action-constraints.txt  build-constraints.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: actions-lint.yml  ci.yml  release.yml  update-pinned-deps.yml
actions/: lint-requirements.txt
actions/create-signing-events/: action.yml
actions/offline-version-bump/: action.yml
actions/online-sign/: action.yml
actions/online-sign-targets/: action.yml
actions/online-version-bump/: action.yml
actions/signing-event/: action.yml
actions/snapshot/: action.yml
actions/test-repository/: action.yml
actions/update-issue/: action.yml
actions/upload-repository/: action.yml  index.css
actions/upload-repository-artifacts/: action.yml
client/: README.md  playground_client.py  requirements.txt  root.json
docs/: CHANGELOG.md  CODE-OF-CONDUCT.md  CODEOWNERS  DELEGATION-MANUAL.md  DEVELOPMENT.md  ONLINE-SIGNING-SETUP.md  RELEASE.md  REPOSITORY-MAINTENANCE.md  SIGNER-MANUAL.md  SIGNER-SETUP.md  YUBIKEY-PIV-SETUP.md  YUBIKEY-WSL-USBIPD.md
repo/: LICENSE  README.md  pyproject.toml
repo/install/: requirements.txt
repo/playground/: __init__.py  _playground_repository.py  bump_expiring.py  snapshot.py  status.py
repo/test/: test_ci_repository.py  test_playground_reposiory.py
repo/test/test_repo1/: root.json  targets.json
repo/test/test_repo2/: root.json
repo/test/test_repo3/good/metadata/: myrole.json  root.json  snapshot.json  targets.json  timestamp.json
repo/test/test_repo3/src_targets/: tfile1.txt
repo/test/test_repo3/src_targets/level1/level2/: tfile2.txt
repo/test/test_repo3/src_targets/levela/: filea.txt
repo/test/test_repo3/src_targets/other_dir/: otherfile.txt
repo/tuf_on_ci/: __init__.py  _git_utils.py  _repository.py  build_repository.py  bump_expiring.py  client.py  create_signing_events.py  online_sign.py  signing_event.py  snapshot.py  status.py
signer/: README.md  create-config-file.sh  pyproject.toml
signer/playground_sign/: __init__.py  _common.py  _signer_repository.py  delegate.py  sign.py
signer/test/: test_signer_repository.py  test_user.py
signer/tuf_on_ci_sign/: __init__.py  _common.py  _signer_repository.py  _user.py  delegate.py  import_repo.py  sign.py
tests/: README.md  e2e.sh  online-test-key
tests/expected/basic/metadata/: 1.root.json  1.targets.json  timestamp.json
tests/expected/delegated/metadata/: 2.snapshot.json  2.targets.json
tests/expected/multi-user-signing/metadata/: 1.root.json  1.snapshot.json  1.targets.json  2.root.json
tests/expected/online-version-bump/metadata/: 1.root.json  1.snapshot.json  1.targets.json  2.snapshot.json  timestamp.json
tests/expected/root-key-rotation/metadata/: 1.root.json  1.targets.json  2.root.json  timestamp.json
tests/expected/signing-event-creation/metadata/: 1.root.json  2.root.json  2.targets.json  3.snapshot.json  timestamp.json
tests/expected/target-file-changes/metadata/: 1.root.json  1.snapshot.json  2.snapshot.json  3.targets.json  timestamp.json
tests/expected/target-files-in-delegated-roles/metadata/: 1.root.json  1.targets.json  2.delegated.json  2.snapshot.json  timestamp.json
tests/softhsm/: README
tests/softhsm/tokens-user1/6087c5cf-c6e9-8a71-a185-1322adf50f3f/: 35fbb8af-9b92-0871-980b-8c3eabf1a1cb.object  9a14c021-cf89-2aff-1294-338c773c4c20.object  token.object
tests/softhsm/tokens-user2/3073b868-0942-0a4a-0bdc-bf54cea956eb/: 1c2cd9d1-b5a3-479f-40bb-42d398bdaaa2.object  36f4e31a-e76a-3c7f-b437-ad7d0fc2a7e5.object  token.object
