[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# for git dependencies
allow-direct-references = true

[project]
name = "tuf-on-ci"
version = "0.0.1"
description = "TUF-on-CI repository tools, intended to be executed on a CI system"
readme = "README.md"
dependencies = [
  "sigstore @ git+https://github.com/sigstore/sigstore-python@7d4af6c5f6732ef12e5bb455962321ebe5cce137",
  "securesystemslib[azurekms, gcpkms, sigstore, pynacl] @ git+https://github.com/secure-systems-lab/securesystemslib@bf63e1b0a58e35c3d5087d5ddd53e43d25e7250a",
  "tuf ~= 3.0.0",
  "click ~= 8.1.0",
]
requires-python = ">=3.10"

[project.scripts]
tuf-on-ci-status = "tuf_on_ci:status"
tuf-on-ci-snapshot = "tuf_on_ci:snapshot"
tuf-on-ci-bump-online = "tuf_on_ci:bump_online"
tuf-on-ci-bump-offline = "tuf_on_ci:bump_offline"

[[tool.mypy.overrides]]
module = [
  "securesystemslib.*",
  "sigstore.*",
]
ignore_missing_imports = "True"

[tool.ruff]
# pycodestyle errors(E) and Pyflakes (F) are enabled by default.
# Also enable isort (I) and pep8-naming (N) .
select = ["E", "F", "I", "N"]
