[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# for git dependencies
allow-direct-references = true

[project]
name = "tuf-on-ci"
version = "0.3.0"
description = "TUF-on-CI repository tools, intended to be executed on a CI system"
readme = "README.md"
dependencies = [
  "securesystemslib[awskms, azurekms, gcpkms, sigstore, pynacl] ~= 0.30",
  "tuf ~= 3.0",
  "click ~= 8.1",
]
requires-python = ">=3.10"

[project.scripts]
tuf-on-ci-build-repository = "tuf_on_ci:build_repository"
tuf-on-ci-create-signing-events = "tuf_on_ci:create_signing_events"
tuf-on-ci-online-sign = "tuf_on_ci:online_sign"
tuf-on-ci-status = "tuf_on_ci:status"
tuf-on-ci-update-targets = "tuf_on_ci:update_targets"

[[tool.mypy.overrides]]
module = [
  "securesystemslib.*",
  "sigstore.*",
]
ignore_missing_imports = "True"

[tool.ruff]
# pycodestyle errors(E) and Pyflakes (F) are enabled by default.
# Also enable isort (I) and pep8-naming (N) .
select = ["E", "F", "I", "N"]
