[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# for git dependencies
allow-direct-references = true

[project]
name = "tuf-on-ci"
description = "TUF-on-CI repository tools, intended to be executed on a CI system"
readme = "README.md"
dependencies = [
  "securesystemslib[awskms, azurekms, gcpkms, sigstore, pynacl] ~= 1.1.0",
  "tuf ~= 5.1",
  "click ~= 8.1",
]
requires-python = ">=3.10"
dynamic = ["version"]

[project.scripts]
tuf-on-ci-build-repository = "tuf_on_ci:build_repository"
tuf-on-ci-test-client = "tuf_on_ci:client"
tuf-on-ci-create-signing-events = "tuf_on_ci:create_signing_events"
tuf-on-ci-online-sign = "tuf_on_ci:online_sign"
tuf-on-ci-online-sign-targets = "tuf_on_ci:online_sign_targets"
tuf-on-ci-status = "tuf_on_ci:status"
tuf-on-ci-update-targets = "tuf_on_ci:update_targets"

[project.optional-dependencies]
lint = [
  "mypy == 1.13.0",
  "ruff == 0.7.1",
]

[tool.hatch.version]
path = "tuf_on_ci/_version.py"

[[tool.mypy.overrides]]
module = [
  "securesystemslib.*",
  "sigstore.*",
]
ignore_missing_imports = "True"

[tool.ruff.lint]
select = [
  "ARG", # flake8-unused-arguments
  "B",   # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4",  # flake8-comprehensions
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "LOG", # flake8-logging
  "N",   # pep8-naming
  "RET", # flake8-return
  "RUF", # ruff-specific rules
  "S",   # flake8-bandit
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
ignore = [
  "S101", # Use of `assert` detected
  "S603", # `subprocess` call: check for execution of untrusted input
]