[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuf-on-ci-sign"
version = "0.6.0"
description = "Signing tools for TUF-on-CI"
readme = "README.md"
dependencies = [
  "securesystemslib[awskms,azurekms,gcpkms,hsm,sigstore] ~= 0.30",
  "tuf ~= 3.0",
  "click ~= 8.1",
]
requires-python = ">=3.10"

[project.scripts]
tuf-on-ci-delegate = "tuf_on_ci_sign:delegate"
tuf-on-ci-import-repo = "tuf_on_ci_sign:import_repo"
tuf-on-ci-sign = "tuf_on_ci_sign:sign"

[[tool.mypy.overrides]]
module = [
  "securesystemslib.*",
]
ignore_missing_imports = "True"

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4",  # flake8-comprehensions
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
ignore = [
  "S101", # Use of `assert` detected
  "S603", # `subprocess` call: check for execution of untrusted input
]