[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuf-on-ci-sign"
description = "Signing tools for TUF-on-CI"
readme = "README.md"
dependencies = [
  "packaging >= 23.2,< 25.0",
  "platformdirs ~= 4.2",
  "securesystemslib[awskms,azurekms,gcpkms,hsm,sigstore] >= 0.31,< 1.2",
  "tuf >= 3.1,< 6.0",
  "click ~= 8.1",
]
requires-python = ">=3.10"
dynamic = ["version"]

[project.scripts]
tuf-on-ci-delegate = "tuf_on_ci_sign:delegate"
tuf-on-ci-import-repo = "tuf_on_ci_sign:import_repo"
tuf-on-ci-sign = "tuf_on_ci_sign:sign"

[project.optional-dependencies]
lint = [
  "mypy == 1.13.0",
  "ruff == 0.7.1",
]

[tool.hatch.version]
path = "tuf_on_ci_sign/__init__.py"

[[tool.mypy.overrides]]
module = [
  "securesystemslib.*",
]
ignore_missing_imports = "True"

[tool.ruff.lint]
select = [
  "ARG", # flake8-unused-arguments
  "B",   # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4",  # flake8-comprehensions
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "LOG", # flake8-logging
  "N",   # pep8-naming
  "RET", # flake8-return
  "RUF", # ruff-specific rules
  "S",   # flake8-bandit
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
ignore = [
  "S101", # Use of `assert` detected
  "S603", # `subprocess` call: check for execution of untrusted input
]
